# serverless-testing-talk

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.sh  curl.txt  runCoverage.sh  serverless.yaml
.github/workflows/: test.yml
src/: main.rs  older  pizza.rs
tests/: invoke.rs
