[package]
name = "test_container"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.64"
mockall = "0.11.3"
mongodb = "2.3.1"
testcontainers = "0.14.0"
tokio = { version = "1.24.2", features = ["macros"] }
