[package]
name = "test_container"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.64"
aws-sdk-dynamodb = "0.24.0"
lambda_http = "0.7.3"
lambda_runtime = "0.7.3"
mockall = "0.11.3"
mongodb = "2.3.1"
serde = "1.0.152"
serde_json = "1.0.93"
testcontainers = "0.14.0"
tokio = { version = "1.24.2", features = ["macros"] }
